# timevery

./: .pre-commit-config.yaml  README.md  pyproject.toml  showcase.py
.github/workflows/: build_wheels.yml  pypi.yml  python.yml
docs/source/: conf.py  index.md  installation.md
src/timevery/: timer.py
