[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timevery"
version = "0.1.9"
description = "Monitor the time cost of your code easily."
readme = "README.md"
authors = [{name = "Shi Changshan", email = "changshanshi@outlook.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["timer"]
dependencies = [
    "rich",
]

[project.urls]
Homepage = "https://github.com/Bardreamaster/timevery"
Documentation = "https://bardreamaster.github.io/timevery/"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2024.10.3",
]

[tool.ruff.lint]
select = ["I"]
